# inventory_optimization

./: .env.example  .gitignore  AGENT_DEPLOYMENT_GUIDE.md  AGENT_DEPLOYMENT_STEPS.md  AGENT_FRAMEWORK_PLAN.md  APP_UPDATE_SUMMARY.md  Add_Chat_Feature.md  BETTER_UX_OPTIONS.md  CUSTOM_EMBEDDED_CHAT.md  DATA_MIGRATION_SUMMARY.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DYNAMIC_DATE_UPDATE.md  EMBEDDED_CHAT_COMPLETE.md  GENIE_API_INTEGRATION.md  GENIE_DEPLOYMENT_COMPLETE.md  GENIE_INTEGRATION_COMPLETE.md  GENIE_STYLE_RESPONSES.md  GITHUB_PUSH_INSTRUCTIONS.md  Grant_Explicit_Permissions.sql  IMMEDIATE_FEEDBACK_IMPLEMENTED.md  LOADING_SPINNER_COMPLETE.md  MIGRATION_QUICK_START.md  MIGRATION_READY.md  PYTHON_SDK_IMPLEMENTATION.md  README.md  SQL_POWERED_CHAT_SOLUTION.md  TABLE_MIGRATION_GUIDE.md  WORKSPACE_MIGRATION_GUIDE.md  deploy_app_manual.sh  grant_all_users_permissions.sql  migrate_to_target_workspace.sh  verify_target_setup.sh
inventory_optimization_bundle/: README.md  databricks.yml  gitignore  pyproject.toml  test.py
inventory_optimization_bundle/agent/: deploy_agent.py  genie_agent.py  requirements.txt
inventory_optimization_bundle/app/: app.py  app_polling_callbacks.py  chat_assistant.py  chat_assistant_agent.py  chat_assistant_direct_genie.py  layout.py  prompts.py  requirements.txt  utils.py
inventory_optimization_bundle/data/: gold_master_part_inventory.sql
inventory_optimization_bundle/scripts/: grant_genie_permissions.sh
